nginx-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels:
    app: jenkins-server
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx-ingress-microk8s-controller
  rules:
    - host: jenkins.r2d2
      http:
        paths:
          - backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jenkins.r2d2.local
      secretName: tls-secret
